--- a/app/index.html
+++ b/app/index.html
@@ -327,7 +327,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a data-route="details" href="/details">
             <iron-icon icon="accessibility"></iron-icon>
             <span>Account Details</span>
-            <iron-icon icon="check" class="done-icon"></iron-icon>
+            <iron-icon icon="done-all" class="done-icon"></iron-icon>
           </a>
 
           <a data-route="password" href="/password">
