--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -196,6 +196,12 @@
             padding: 16px;
         }
 
+        paper-material.form {
+            max-width: 940px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
         paper-material.form > h2 {
             padding: 0 0 16px 0;
         }
@@ -380,7 +386,7 @@
             @apply(--layout-flex);
         }
         ::content paper-button {
-            font-weight: 500;
+            font-weight: 400;
             padding: 0.8em 1.57em 0.7em 1.57em;
         }
         ::content form paper-menu > paper-button {
