--- a/app/elements/notes-page-element.html
+++ b/app/elements/notes-page-element.html
@@ -30,15 +30,17 @@
             - Set up upload key file
             - Set up iron-ajax request for save
             - Send the new key to keys list
-            - Check name validation
 
             #### Networks List
             - Update random items and sort again
             - Fix types
 
+            #### Single Network
+            - Subnets
+            - IPs
+
             #### Scripts List
             - Update random items and sort again
-            - Bind to single key page (test animations here)
 
             #### Plans
             - Change the layout
