pasword reset styling

--- a/app/index.html
+++ b/app/index.html
@@ -333,7 +333,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a data-route="password" href="/password">
             <iron-icon icon="lock"></iron-icon>
             <span>Password Reset</span>
-            <iron-icon icon="check" class="done-icon"></iron-icon>
+            <iron-icon icon="done-all" class="done-icon"></iron-icon>
           </a>
 
           <a data-route="plans" href="/plans">
