--- a/app/elements/styling-mist.html
+++ b/app/elements/styling-mist.html
@@ -6,6 +6,7 @@
         <style is="custom-style" include="shared-styles"></style>
         <style is="custom-style" include="tags-and-labels"></style>
         <style is="custom-style" include="dialogs"></style>
+        <style is="custom-style" include="forms"></style>
         <style>
         :host {
             display: block;
