details input paddingtweak

--- a/app/elements/details-element.html
+++ b/app/elements/details-element.html
@@ -18,7 +18,7 @@
         }
 
         .flex > * {
-            margin-right: 16px;
+            margin: 8px 32px 16px 0;
         }
         </style>
         <paper-material class="form">
